force-app/main/default/objects/Support_Settings__c/Support_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Support Settings</label>
</CustomObject>