force-app/main/default/objects/Support_Settings__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <description>Value for the Case Origin field when a ticket is submitted.</description>
    <label>Case Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>