force-app/main/default/objects/Support_Settings__c/fields/Case_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Id__c</fullName>
    <description>The Id for the Customer Support Queue.</description>
    <label>Case Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>