force-app/main/default/objects/Support_Settings__c/fields/reCaptcha_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>reCaptcha_Endpoint__c</fullName>
    <description>The reCaptcha Endpoint</description>
    <label>reCaptcha Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>