force-app/main/default/objects/Support_Settings__c/fields/reCaptcha_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>reCaptcha_Secret_Key__c</fullName>
    <description>The reCaptcha Secret Key. The Site Key is in the Experience Builder HTML Markup.</description>
    <label>reCaptcha Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>