force-app/main/default/objects/Support_Settings__c/fields/Sales_Case_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Case_Record_Type_Id__c</fullName>
    <label>Sales Case Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>