force-app/main/default/objects/Support_Settings__c/fields/Sales_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Queue_ID__c</fullName>
    <label>Sales Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>