force-app/main/default/objects/Support_Settings__c/fields/SSO_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>SSO_Login_URL__c</fullName>
    <description>The Okta Login URL for the Circle Help Site.</description>
    <label>SSO Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>