force-app/main/default/objects/Support_Settings__c/fields/Start_Url__c.field-meta.xml
<CustomField>
    <fullName>Start_Url__c</fullName>
    <description>The Circle Help Community main url.</description>
    <label>Start Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>